fix some overflow and passing

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,15 +1,14 @@
 .App {
   max-width: 1280px;
-  margin: 0 auto;
   // padding: 2rem;
   text-align: center;
-  width: 100vw;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-items: center;
   color: var(--white);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .logo {
