--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -1,8 +1,11 @@
 .root {
-  width: 100%;
+  width: auto;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  justify-content: center;
+  color: var(--bg1);
+  background-color: var(--bg1);
 }
