--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,9 +1,9 @@
 .root {
   display: flex;
-  width: 100%;
+  width: auto;
   flex-direction: row;
   padding: 0rem 2rem;
-  margin-left: 1rem;
+  margin-left: 0rem;
   justify-content: space-between;
   align-items: center;
   background-color: var(--bg1);
