--- a/src/components/top-section/top-section.module.scss
+++ b/src/components/top-section/top-section.module.scss
@@ -1,5 +1,5 @@
 .root {
-  width: 100vw;
-  padding: 1rem;
+  padding: 0rem;
   height: auto;
+  width: 90%;
 }
